--- a/hospital managment/hospital-managment/pom.xml
+++ b/hospital managment/hospital-managment/pom.xml
@@ -79,6 +79,12 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.30</version>
+		</dependency>
+
 	
    <dependency>
      <groupId>org.apache.commons</groupId>
